--- a/src/ui/components/AppShared.css
+++ b/src/ui/components/AppShared.css
@@ -1,3 +1,3 @@
-﻿@import './AppShared.layout.css';
+@import './AppShared.layout.css';
 @import './AppShared.usage.css';
 @import './AppShared.tables.css';
